--- a/elementLayout.html
+++ b/elementLayout.html
@@ -6,6 +6,10 @@
 </head>
 
 <body onload="startGame()">
+  <div class = "pause" id ="mainPauseMenu"></div>
+  <div class = "Background" id ="border">
+  <div class = "Background" id ="back"></div>
+  </div>
 </script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src='engine.js'></script>
